--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,14 +1,16 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <group
+        android:rotation="270"
+        android:pivotX="12"
+        android:pivotY="12"
         android:scaleX="0.75"
         android:scaleY="0.75"
-        android:translateX="3"
-        android:translateY="3">
+        android:translateX="0"
+        android:translateY="0">
         <path
             android:fillColor="#FFFFFF"
             android:pathData="M15.5,5.5c0.4,0.4 0.4,1 0,1.4L10.4,12l5.1,5.1c0.4,0.4 0.4,1 0,1.4 -0.4,0.4 -1,0.4 -1.4,0L8.3,12.7c-0.4,-0.4 -0.4,-1 0,-1.4l5.8,-5.8c0.4,-0.4 1,-0.4 1.4,0z"/>
