--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,5 +1,4 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
@@ -10,19 +9,29 @@
         android:translateX="6"
         android:translateY="6">
 
-        <!-- Top bar -->
+        <!-- Top bar (rounded ends) -->
         <path
-            android:fillColor="#FFFFFF"
-            android:pathData="M4,6h16v2H4z"/>
+            android:pathData="M4,7 H20"
+            android:strokeColor="#FFFFFF"
+            android:strokeWidth="2"
+            android:strokeLineCap="round"
+            android:fillColor="#00000000" />
 
-        <!-- Middle bar -->
+        <!-- Middle bar (rounded ends) -->
         <path
-            android:fillColor="#FFFFFF"
-            android:pathData="M4,11h16v2H4z"/>
+            android:pathData="M4,12 H20"
+            android:strokeColor="#FFFFFF"
+            android:strokeWidth="2"
+            android:strokeLineCap="round"
+            android:fillColor="#00000000" />
 
-        <!-- Bottom bar -->
+        <!-- Bottom bar (rounded ends) -->
         <path
-            android:fillColor="#FFFFFF"
-            android:pathData="M4,16h16v2H4z"/>
+            android:pathData="M4,17 H20"
+            android:strokeColor="#FFFFFF"
+            android:strokeWidth="2"
+            android:strokeLineCap="round"
+            android:fillColor="#00000000" />
+
     </group>
 </vector>
