--- a/app/src/main/res/layout/floating_menu.xml
+++ b/app/src/main/res/layout/floating_menu.xml
@@ -9,9 +9,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:gravity="center"
         android:orientation="vertical">
 
         <TextView
@@ -34,7 +35,10 @@
             android:layout_height="match_parent"
             android:layout_marginTop="24dp"
             android:orientation="horizontal"
-            android:padding="6dp">
+            android:paddingLeft="6dp"
+            android:paddingTop="0dp"
+            android:paddingRight="6dp"
+            android:paddingBottom="0dp">
 
             <!-- Back -->
             <include
@@ -49,6 +53,28 @@
             <!-- Recents -->
             <include
                 android:id="@+id/itemRecents"
+                layout="@layout/menu_item_icon_text" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="24dp"
+            android:orientation="horizontal"
+            android:paddingLeft="6dp"
+            android:paddingTop="0dp"
+            android:paddingRight="6dp"
+            android:paddingBottom="0dp">
+
+            <!-- Lock -->
+            <include
+                android:id="@+id/itemLock"
+                layout="@layout/menu_item_icon_text" />
+
+            <!-- SS -->
+            <include
+                android:id="@+id/itemSS"
                 layout="@layout/menu_item_icon_text" />
 
         </LinearLayout>
