--- a/app/src/main/res/layout/floating_menu.xml
+++ b/app/src/main/res/layout/floating_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/floatingMenuRoot"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -15,17 +14,19 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="16dp"
-            android:text="@string/floating_menu_title"
-            android:textAlignment="center"
-            android:textSize="22sp" />
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="80dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="6dp"
+            android:contentDescription="@string/app_logo"
+            android:src="@drawable/axio_logo_main_small_new" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="18dp"
             android:text="@string/floating_menu_subtitle"
             android:textAlignment="center"
             android:textSize="16sp" />
@@ -33,7 +34,6 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginTop="24dp"
             android:orientation="horizontal"
             android:paddingLeft="6dp"
             android:paddingTop="0dp"
